--- a/styles/site.css
+++ b/styles/site.css
@@ -8,11 +8,11 @@ body{
 header {
   display: flex;
   flex-direction: column;
-  color: #fff8e7;
-  background:  url(../images/apples.png) no-repeat center center;
+  color: #e9c89c;
+  background:  #a93734;
   background-size: cover;
   text-align: center;
-  height: 210px;
+  height: auto;
 }
 
 header h1 {
@@ -29,45 +29,77 @@ header h1 {
 }
 
 header p {
-  background-color: rgba(144, 35, 35, 0.5);
   padding: 5px;
-  font-weight: bold;
-  color: black;
+  font-weight: lighter;
+  color: #e9c89c;
+  margin: 0px;
+  padding-bottom: 5px;
+  font-family: sans-serif
 }
 
 header h2 {
   padding: 0;
+  color:  #e9c89c;
   padding-left: 10px;
   margin: 0;
   text-align: left;
   font-family: Snell Roundhand, cursive;
 }
 
+h2 {
+  color: #6a2c27;
+  font-size: 32px;
+  display: inline-block;
+  font-family: sans-serif;
+}
+
+h3 {
+  font-size: 26px;
+  font-family: sans-serif;
+}
+
 header nav {
   margin-top: 10px;
-  background-color: rgba(0, 0, 0, 0.66);
+  color: #e9c89c;
+  font-size: 18px;
 }
 
 main {
   display: flex;
   flex-direction: column;
+  font-size: 20px;
 }
 
 .container {
   position: relative;
   text-align: center;
   color: white;
+  background-color: rgba(0, 0, 0, 0.66);
 }
 
 .main-about {
   display: flex;
   flex-direction: row;
+  margin-bottom: 20px;
 }
 
 .main-schedule {
   display: flex;
   flex-direction: row;
   padding: 10px;
+}
+
+cite {
+  display: block;
+}
+
+h3 {
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .about-description {
@@ -77,37 +109,193 @@ main {
   flex-direction: column;
 }
 
-.schedule-saturday {
+.schedule-saturday, .schedule-sunday {
+  font-size: 20px;
   padding-right: 10px;
-}
-
-.schedule-sunday {
   padding-left: 10px;
+  background-color: #e9c89c;
+  color: #a93734;
+  margin-left: auto;
+  margin-right: auto;
+  border-color: black;
+  border-style: solid;
 }
 
-.smallImage {
-  max-width: 300px;
-  height: auto;
+.scheduleTitle {
+  text-align: center;
+  font-size: 30px;
+}
+
+header nav ul {
+  margin: 10px;
+  padding-left: 0px;
 }
 
 header nav ul li {
+  background-color: rgba(34, 4, 4, 0.6);
   display: inline;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   text-decoration: none;
   margin: 10px;
-  padding: 20px;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 10px;
 }
 
 nav a {
-  color:  white;
+  color:  #e9c89c;
   text-decoration: none;
 }
 
 img{
-  width: 450px;
-  height: 100%;
+  width: 430px;
 }
 
-@media (min-width: 900px) {
+.row1, .row2, .row3 {
+  display: block;
+  flex-direction: row;
+  padding-bottom: 30px;
+  justify-content: space-around;
+}
+
+.galleryBody {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media (max-width: 600px){
+
+  .mapImage {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .main-about {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+
+  .main-schedule {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+  .schedule-saturday {
+    margin-bottom: 10px;
+  }
+
+  header nav {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+  header h1 {
+    font-size: 30px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+
+  header nav ul {
+    margin: 2px;
+    padding-left: 0px;
+  }
+
+  header nav ul li {
+    display: inline;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    text-decoration: none;
+    background-color: rgba(34, 4, 4, 0.6);
+    border-color: black;
+    border-style: solid;
+    border-width: thin;
+    border-radius: 10px;
+  }
+  header p {
+    font-size: 15px;
+  }
+
+  h2, h3 {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .galleryImg {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .activitiesPic {
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+  }
+
+  .about-description {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
+  }
+
+  .about-image {
+    padding: 0px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .smallImage {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .galleryBody {
+    display: flex;
+    flex-direction: column;
+  }
+
+  img {
+    width: 300px;
+  }
+
+  .galleryPic {
+    width: 300px;
+    margin: 0px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .row1 {
+    margin: 0px;
+    padding: 0px;
+  }
+}
+
+
+@media (min-width: 600px) and (max-width: 900px){
+
+  .smallImage {
+    width: 400px;
+  }
+
+  .mapImage {
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+    height: 100%;
+  }
 
   .galleryBody {
     display: flex;
@@ -115,21 +303,48 @@ img{
     padding-left: 30px;
   }
 
-  .row1 {
+  .galleryPic {
+    width: 500px;
+    margin: 0px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .galleryPic img {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 30px;
+  }
+
+  .row1, .row2, .row3 {
+    display: block;
+    flex-direction: row;
+    padding-bottom: 30px;
+    justify-content: space-around;
+  }
+}
+
+@media (min-width: 900px) {
+
+  .galleryBody {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .galleryPic {
+    width: 450px;
+  }
+
+  .row1, .row2, .row3 {
     display: flex;
     flex-direction: row;
     padding-bottom: 30px;
   }
 
-  .row2 {
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 30px;
-  }
-
-  .row3 {
-    display: flex;
-    flex-direction: row;
+  .about-image {
+    width: 50%;
   }
 
   .mapImage {
@@ -139,13 +354,12 @@ img{
     margin-right: auto;
   }
 
-}
-
-@media (min-width: 600px) and (max-width: 900px){
-  .mapImage {
-    margin-left: auto;
-    margin-right: auto;
-    width: 600px;
-    height: 100%;
+  .smallImage {
+    width: 450px;
   }
+
+  .activitiesPic {
+    width: 600px;
+  }
+
 }
